[gd_scene load_steps=7 format=3 uid="uid://c2h8o487ak12n"]

[ext_resource type="Script" uid="uid://cr2palodsoj5p" path="res://main_menu.gd" id="1_l5ig1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wp2rf"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rdbl1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mwt5"]
bg_color = Color(0.827451, 0.827451, 0.827451, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_721g3"]
bg_color = Color(0.65098, 0.65098, 0.65098, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3spam"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 4

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_l5ig1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wp2rf")

[node name="ProjectTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -179.0
offset_right = 239.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 46
text = "Heating control panel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -44.0
offset_right = 121.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2

[node name="Live" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rdbl1")
theme_override_styles/hover = SubResource("StyleBoxFlat_4mwt5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_721g3")
theme_override_styles/normal = SubResource("StyleBoxFlat_3spam")
text = "Live"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rdbl1")
theme_override_styles/hover = SubResource("StyleBoxFlat_4mwt5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_721g3")
theme_override_styles/normal = SubResource("StyleBoxFlat_3spam")
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rdbl1")
theme_override_styles/hover = SubResource("StyleBoxFlat_4mwt5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_721g3")
theme_override_styles/normal = SubResource("StyleBoxFlat_3spam")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Live" to="." method="_on_live_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
